# comp-math-lab4

./: Cargo.toml  test.json
src/: main.rs  methods.rs
