[package]
name = "lab4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-table = "0.4.7"
inquire = "0.7.5"
mathru = "0.15.3"
plotters = "0.3.6"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
